[package]
name = "theme-converter"
version = "0.1.0"
edition = "2021"
description = "Convert VSCode/Neovim Theme to SublimeText .tmTheme"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
plist = "1.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
